# services/data-service/src/main/java/at/escapedoom/data/rest/model/RiddleCreationRequestDTO.java
@@ -2,10 +2,9 @@ package at.escapedoom.data.rest.model;
 
 import java.net.URI;
 import java.util.Objects;
-import at.escapedoom.data.rest.model.CodingLanguage;
+import at.escapedoom.data.rest.model.RiddleWrapper;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
 import org.springframework.lang.Nullable;
 import java.time.OffsetDateTime;
 import jakarta.validation.Valid;
@@ -26,121 +25,29 @@ import jakarta.annotation.Generated;
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.11.0")
 public class RiddleCreationRequestDTO {
 
-    private @Nullable CodingLanguage language;
-
-    private @Nullable String functionSignature;
-
-    private @Nullable String input;
-
-    private @Nullable String variableName;
-
-    private @Nullable String expectedOutput;
+    private @Nullable RiddleWrapper riddle;
 
     private @Nullable String levelId;
 
-    public RiddleCreationRequestDTO language(CodingLanguage language) {
-        this.language = language;
+    public RiddleCreationRequestDTO riddle(RiddleWrapper riddle) {
+        this.riddle = riddle;
         return this;
     }
 
     /**
-     * Get language
+     * Get riddle
      *
-     * @return language
+     * @return riddle
      */
     @Valid
-    @Schema(name = "language", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-    @JsonProperty("language")
-    public CodingLanguage getLanguage() {
-        return language;
+    @Schema(name = "riddle", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+    @JsonProperty("riddle")
+    public RiddleWrapper getRiddle() {
+        return riddle;
     }
 
-    public void setLanguage(CodingLanguage language) {
-        this.language = language;
-    }
-
-    public RiddleCreationRequestDTO functionSignature(String functionSignature) {
-        this.functionSignature = functionSignature;
-        return this;
-    }
-
-    /**
-     * The function signature
-     *
-     * @return functionSignature
-     */
-
-    @Schema(name = "function_signature", example = "public static int sum(int a, int b)", description = "The function signature", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-    @JsonProperty("function_signature")
-    public String getFunctionSignature() {
-        return functionSignature;
-    }
-
-    public void setFunctionSignature(String functionSignature) {
-        this.functionSignature = functionSignature;
-    }
-
-    public RiddleCreationRequestDTO input(String input) {
-        this.input = input;
-        return this;
-    }
-
-    /**
-     * The input values for the function
-     *
-     * @return input
-     */
-
-    @Schema(name = "input", example = "2, 3", description = "The input values for the function", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-    @JsonProperty("input")
-    public String getInput() {
-        return input;
-    }
-
-    public void setInput(String input) {
-        this.input = input;
-    }
-
-    public RiddleCreationRequestDTO variableName(String variableName) {
-        this.variableName = variableName;
-        return this;
-    }
-
-    /**
-     * The name of the variable to compare
-     *
-     * @return variableName
-     */
-
-    @Schema(name = "variable_name", example = "result", description = "The name of the variable to compare", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-    @JsonProperty("variable_name")
-    public String getVariableName() {
-        return variableName;
-    }
-
-    public void setVariableName(String variableName) {
-        this.variableName = variableName;
-    }
-
-    public RiddleCreationRequestDTO expectedOutput(String expectedOutput) {
-        this.expectedOutput = expectedOutput;
-        return this;
-    }
-
-    /**
-     * The expected output of the riddle
-     *
-     * @return expectedOutput
-     */
-
-    @Schema(name = "expected_output", example = "42", description = "The expected output of the riddle", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-    @JsonProperty("expected_output")
-    public String getExpectedOutput() {
-        return expectedOutput;
-    }
-
-    public void setExpectedOutput(String expectedOutput) {
-        this.expectedOutput = expectedOutput;
+    public void setRiddle(RiddleWrapper riddle) {
+        this.riddle = riddle;
     }
 
     public RiddleCreationRequestDTO levelId(String levelId) {
@@ -173,28 +80,20 @@ public class RiddleCreationRequestDTO {
             return false;
         }
         RiddleCreationRequestDTO riddleCreationRequestDTO = (RiddleCreationRequestDTO) o;
-        return Objects.equals(this.language, riddleCreationRequestDTO.language)
-                && Objects.equals(this.functionSignature, riddleCreationRequestDTO.functionSignature)
-                && Objects.equals(this.input, riddleCreationRequestDTO.input)
-                && Objects.equals(this.variableName, riddleCreationRequestDTO.variableName)
-                && Objects.equals(this.expectedOutput, riddleCreationRequestDTO.expectedOutput)
+        return Objects.equals(this.riddle, riddleCreationRequestDTO.riddle)
                 && Objects.equals(this.levelId, riddleCreationRequestDTO.levelId);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(language, functionSignature, input, variableName, expectedOutput, levelId);
+        return Objects.hash(riddle, levelId);
     }
 
     @Override
     public String toString() {
         StringBuilder sb = new StringBuilder();
         sb.append("class RiddleCreationRequestDTO {\n");
-        sb.append("    language: ").append(toIndentedString(language)).append("\n");
-        sb.append("    functionSignature: ").append(toIndentedString(functionSignature)).append("\n");
-        sb.append("    input: ").append(toIndentedString(input)).append("\n");
-        sb.append("    variableName: ").append(toIndentedString(variableName)).append("\n");
-        sb.append("    expectedOutput: ").append(toIndentedString(expectedOutput)).append("\n");
+        sb.append("    riddle: ").append(toIndentedString(riddle)).append("\n");
         sb.append("    levelId: ").append(toIndentedString(levelId)).append("\n");
         sb.append("}");
         return sb.toString();
